@startuml

Event "1  " *-- User
Event "1  " *-- Room 

interface User{
    -id: String
    -userName: String
    -password: String
    -email: String
}

interface Room{
    -id: String
    -name: String
    -location: String
}

interface Event{
    -id: String
    -title: String
    ' -daysOfWeek: number
    -startRecur: Date
    -endTime: Date
    ' -isRecur: boolean
    ' -startRecur: Date
    ' -endRecur: Date
    -allDay: boolean
    -creator: User
    -roomId: Room
}
@enduml
